--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4324,7 +4324,7 @@ div.fb-upload-caption a {
 	cursor: pointer;
 }
 
-.upload-toggle {
+#fb-file-operations-controls .upload-toggle {
 	margin-top: -4px;
 	margin-right: 6px;
 }
