--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button id="btn-edit-source" type="submit" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
         </div>
@@ -87,14 +87,14 @@
                 <input name="resource-mode" type="hidden" value="edit">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="edit-relation"> Edit Relation </h4></div>
+                    <h4 class="modal-title" id="edit-relation"> Edit Relation </h4>
+                </div>
                 <div class="modal-body">
                     {% csrf_token %}
 
                     <div class="form-group">
                         {% csrf_token %}
                         <fieldset>
-                            <legend>Relation</legend>
                             <div id="div_id_type" class="control-group">
                                 <label for="id_type" class="control-label requiredField">
                                 Relation type<span class="asteriskField">*</span></label>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button id="btn-edit-relation" type="submit" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
         </div>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button id="btn-edit-contributor" type="submit" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
         </div>
@@ -666,7 +666,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button id="btn-add-source" type="submit" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
         </div>
@@ -722,7 +722,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button id="btn-add-relation" type="submit" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
         </div>
