--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -156,8 +156,11 @@
                             <span class="fa fa-link icon-blue"></span>
                             <span>Edit referenced URL</span>
                         </li>
-                        <li id="btn-set-generic-file-type" data-fb-action="setGenericFileType" data-toggle="tooltip"
-                            title="Add metadata to an individual file" data-placement="right">
+                        <li id="btn-set-generic-file-type" data-fb-action="setGenericFileType">
+                            <i class="fa fa-plus icon-green" aria-hidden="true"></i>
+                            <span>Add metadata</span>
+                        </li>
+                        <li id="btn-set-fileset-file-type" data-fb-action="setFileSetFileType">
                             <i class="fa fa-plus icon-green" aria-hidden="true"></i>
                             <span>Add metadata</span>
                         </li>
@@ -205,7 +208,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li id="btn-remove-aggregation" data-menu-name="content-type"  data-fb-action="removeAggregation" data-toggle="tooltip"
+                        <li id="btn-remove-aggregation" data-fb-action="removeAggregation" data-toggle="tooltip"
                             title="Remove the content type association and delete content-level metadata"
                             data-placement="right">
                             <i class="fa fa-minus-circle btn-remove" aria-hidden="true"></i>
