--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4410,8 +4410,8 @@ div.fb-upload-caption a {
 }
 
 .fb-view-grid .fb-aggregation-icon > img {
-    height: 38px;
-    margin-top: -3px;
+	width: 30px;
+	height: 30px;
 }
 
 .fb-view-grid .fb-file-name {
